--- a/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.scss
+++ b/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.scss
@@ -1,9 +1,7 @@
 @import '../../../../../styles/colors';
 
 .close {
-  color: $grey;
-  margin-top: -12px;
-  margin-right: -12px;
+  margin: -16px 0 8px;
   display: flex;
   justify-content: right;
 }
