Update recon and cov dialog styling to match standard application

--- a/alcs-frontend/src/app/features/board/dialogs/covenant/covenant-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/covenant/covenant-dialog.component.html
@@ -26,7 +26,7 @@
   </div>
   <div class="header-row">
     <div class="left"></div>
-    <div style="margin-right: -16px" class="right">
+    <div class="right">
       <button matTooltip="Move Board" [matMenuTriggerFor]="moveMenu" mat-icon-button>
         <mat-icon>move_down</mat-icon>
       </button>
