--- a/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.scss
+++ b/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.scss
@@ -1,9 +1,10 @@
 @import '../../../../../styles/colors';
 
 .close {
-  margin: -16px 0 8px;
+  color: $grey;
   display: flex;
   justify-content: right;
+  margin: -24px 0 8px;
 }
 
 .header-row {
