--- a/alcs-frontend/src/app/features/board/dialogs/reconsiderations/reconsideration-dialog.component.scss
+++ b/alcs-frontend/src/app/features/board/dialogs/reconsiderations/reconsideration-dialog.component.scss
@@ -2,10 +2,9 @@
 
 .close {
   color: $grey;
-  margin-top: -12px;
-  margin-right: -12px;
   display: flex;
   justify-content: right;
+  margin: -24px 0 8px;
 }
 
 .header-row {
