Update card creation dialog paddings to align title and fields

--- a/alcs-frontend/src/app/features/board/dialogs/reconsiderations/create/create-reconsideration-dialog.html
+++ b/alcs-frontend/src/app/features/board/dialogs/reconsiderations/create/create-reconsideration-dialog.html
@@ -150,7 +150,7 @@
         >
         </ng-select>
       </div>
-      <div>
+      <div class="full-grid">
         <mat-form-field class="date-picker" appearance="outline">
           <mat-label>Reconsideration Request Submitted to ALC</mat-label>
           <input
