Load Local Governments from Redis for Portal
* Add Redis Service to Portal
* Load Local Governments into Redis on ACLS Local Government Service Init
* Fetch Local Governments from Redis on Portal Side
* Remove form validation so empty application can be updated
* Split Update and Attach Document into two separate endpoints
* Add Toasts to Portal for Success/Failure

--- a/portal-frontend/src/app/features/edit-application/edit-application.component.html
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.html
@@ -8,7 +8,7 @@
         <div>
           <h6>Applicant Last Name</h6>
           <mat-form-field class="full-width-input" appearance="outline">
-            <input matInput placeholder="Type last name" formControlName="applicantName" required />
+            <input matInput placeholder="Type last name" formControlName="applicantName" />
           </mat-form-field>
         </div>
         <div>
@@ -18,7 +18,6 @@
               type="text"
               aria-label="Text"
               matInput
-              required
               formControlName="localGovernment"
               placeholder="Type and select from dropdown"
               [matAutocomplete]="auto"
@@ -43,5 +42,5 @@
       </div>
     </form>
   </mat-step>
-  <mat-step label="Review & Submit"> </mat-step>
+  <mat-step label="Review & Submit"></mat-step>
 </mat-stepper>
