--- a/alcs-frontend/src/app/shared/meeting-overview/meeting-overview.component.scss
+++ b/alcs-frontend/src/app/shared/meeting-overview/meeting-overview.component.scss
@@ -229,7 +229,7 @@ mat-panel-description {
   }
 }
 
-.application-panel {
+.application-card {
   margin-bottom: 16px;
   padding: 16px;
   background-color: #fff;
