--- a/alcs-frontend/src/app/shared/meeting-overview/meeting-overview.component.scss
+++ b/alcs-frontend/src/app/shared/meeting-overview/meeting-overview.component.scss
@@ -147,7 +147,7 @@ mat-panel-description {
       }
     }
 
-    .application-panel:hover {
+    .application-card:hover {
       border-color: $secondary-color;
     }
   }
@@ -177,7 +177,7 @@ mat-panel-description {
       }
     }
 
-    .application-panel:hover {
+    .application-card:hover {
       border-color: $primary-color;
     }
   }
@@ -207,7 +207,7 @@ mat-panel-description {
       }
     }
 
-    .application-panel:hover {
+    .application-card:hover {
       border-color: $accent-color;
     }
   }
