--- a/alcs-frontend/src/app/features/application/info-requests/info-requests.component.scss
+++ b/alcs-frontend/src/app/features/application/info-requests/info-requests.component.scss
@@ -13,6 +13,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin-bottom: 32px;
 
   .col-40 {
     width: 40%;
