--- a/alcs-frontend/src/app/features/application/overview/overview.component.scss
+++ b/alcs-frontend/src/app/features/application/overview/overview.component.scss
@@ -1,7 +1,7 @@
 h5 {
-  margin: 16px 0 16px 0 !important;
+  margin: 16px 0 !important;
 }
 
 section {
-  margin-bottom: 32px;
+  margin: 32px 0;
 }
