--- a/alcs-frontend/src/app/features/board/subtasks/subtasks.component.scss
+++ b/alcs-frontend/src/app/features/board/subtasks/subtasks.component.scss
@@ -5,16 +5,25 @@
 }
 
 .subtasks {
+  margin: 1rem 0;
+}
+
+.subtask {
+  border: 2px solid transparent;
+  border-radius: 4px;
+  box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.25);
   display: grid;
-  grid-template-columns: max-content max-content max-content 1fr 1fr 45px 45px;
-  border-radius: 2px;
-  border: 1px solid #000;
-  border-bottom: none;
+  grid-template-columns: 0.7fr max-content 0.45fr 1fr 1fr 48px 48px;
+  height: 48px;
+  margin-bottom: 8px;
+  transition: all 100ms ease-in-out;
+
+  &:hover {
+    border-color: $primary-color;
+  }
 
   & > div {
-    border-bottom: 1px solid #000;
-    padding: 0 8px;
-    height: 48px;
+    padding: 0 16px;
   }
 }
 
@@ -47,16 +56,6 @@
 
   .completed {
     color: $success-color;
-  }
-}
-
-.dates {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
-  span {
-    width: fit-content;
   }
 }
 
