Add border hover effect to board card component

--- a/alcs-frontend/src/app/shared/card/card.component.scss
+++ b/alcs-frontend/src/app/shared/card/card.component.scss
@@ -1,17 +1,40 @@
 @import '../../../styles/colors';
 
+$card-ht: 160px;
+$date-ht: 48px;
+
 .card {
-  height: 160px;
+  height: $card-ht;
   margin-bottom: 1rem !important;
   cursor: grab;
   width: 280px;
   font-size: 16px;
+  border: 2px solid transparent;
+  transition: all 100ms ease-in-out;
+  display: flex;
+  flex-direction: column;
+
+  &:hover {
+    border-color: $primary-color;
+
+    > .decision-date-info {
+      border-color: $primary-color;
+    }
+  }
 }
 
 .card.paused {
   opacity: 0.8;
-  background-color: #c3c3c3;
-  border: 2px solid $grey-dark;
+  background-color: $paused-color;
+  border: 2px solid transparent;
+
+  &:hover {
+    border-color: $grey-dark;
+
+    > .decision-date-info.paused {
+      border-color: $grey-dark;
+    }
+  }
 }
 
 .card-content {
@@ -38,12 +61,6 @@
   font-weight: bold;
   color: $error-color;
   float: right;
-}
-
-.assignee {
-  border-radius: 50%;
-  padding: 6px;
-  border: 1px solid #0a5a9c;
 }
 
 .active-days {
@@ -74,18 +91,21 @@
 }
 
 .decision-date-info {
+  align-items: center;
   background-color: $secondary-color;
+  border: 2px solid transparent;
+  border-bottom: none;
   border-radius: 4px 4px 0 0;
-  text-align: center;
-  position: relative;
+  display: flex;
   font-size: 16px;
-  width: 280px;
-  padding: 8px 0px;
+  height: $date-ht;
+  justify-content: center;
+  margin: -16px -18px 16px !important;
+  transition: all 100ms ease-in-out;
 }
 
 .decision-date-info.paused {
   background-color: $secondary-color-light;
-  border: 2px solid $grey-dark;
   opacity: 0.8;
 }
 
@@ -98,7 +118,6 @@
 }
 
 mat-card.decision-date {
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
   border-top: none;
+  height: calc($card-ht + $date-ht);
 }
