--- a/alcs-frontend/src/styles/colors.scss
+++ b/alcs-frontend/src/styles/colors.scss
@@ -26,3 +26,4 @@ $warning-color: #cc8b18;
 $dark-contrast-text: #000000;
 $light-contrast-text: $white;
 $pending-star: $grey;
+$paused-color: #c3c3c3;
