Remove blue underline in header menu items

--- a/alcs-frontend/src/app/shared/header/header.component.scss
+++ b/alcs-frontend/src/app/shared/header/header.component.scss
@@ -5,6 +5,10 @@
   border-bottom: 1px solid;
   background-color: $primary-color;
   color: $white;
+
+  a {
+    text-decoration: none;
+  }
 }
 
 .mat-toolbar {
