--- a/alcs-frontend/src/app/features/errors/not-found/not-found.component.html
+++ b/alcs-frontend/src/app/features/errors/not-found/not-found.component.html
@@ -1,1 +1,7 @@
-<p>404 Page not found</p>
+<!-- Regular option will be returned after Christmas -->
+<!-- <p>404 Page not found</p> -->
+
+<div class="centered">
+  <img src="/assets/images/pusheen.gif" />
+  <h4 class="centered-header">Looks like everyone is out for Christmas</h4>
+</div>
