--- a/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.html
@@ -8,18 +8,10 @@
     <div class="left">
       <h3 class="card-title">
         {{ application.fileNumber }} ({{ application.applicant }})
-        <span
-          class="center application-type"
-          [ngStyle]="{
-            backgroundColor: application.type.backgroundColor,
-            color: application.type.textColor
-          }"
-        >
-          {{ application.type.label }}
-        </span>
+        <app-application-type-pill [type]="application.type"></app-application-type-pill>
       </h3>
     </div>
-    <div>
+    <div class="center">
       <button color="accent" [matMenuTriggerFor]="moreActions" mat-flat-button>More Actions ▾</button>
       <mat-menu xPosition="before" #moreActions="matMenu">
         <button
