--- a/alcs-frontend/src/app/features/board/dialogs/covenant/covenant-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/covenant/covenant-dialog.component.html
@@ -6,18 +6,9 @@
   </div>
   <div class="header-row">
     <div class="left">
-      <h3 class="card-title">
+      <h3 class="card-title center">
         {{ covenant.fileNumber }} ({{ covenant.applicant }})
-        <span
-          class="center application-type"
-          [ngStyle]="{
-            backgroundColor: covenantType.backgroundColor,
-            color: covenantType.textColor,
-            borderColor: covenantType.borderColor
-          }"
-        >
-          {{ covenantType.label }}
-        </span>
+        <app-application-type-pill [type]="covenantType"></app-application-type-pill>
       </h3>
     </div>
   </div>
