--- a/alcs-frontend/src/app/features/board/dialogs/planning-review/planning-review-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/planning-review/planning-review-dialog.component.html
@@ -6,18 +6,9 @@
   </div>
   <div class="header-row">
     <div class="left">
-      <h3 class="card-title">
+      <h3 class="card-title center">
         {{ planningReview.fileNumber }} ({{ planningReview.type }})
-        <span
-          class="center type-label"
-          [ngStyle]="{
-            backgroundColor: planningType.backgroundColor,
-            color: planningType.textColor,
-            borderColor: planningType.borderColor
-          }"
-        >
-          {{ planningType.label }}
-        </span>
+        <app-application-type-pill [type]="planningType"></app-application-type-pill>
       </h3>
     </div>
   </div>
