--- a/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.html
+++ b/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.html
@@ -16,6 +16,13 @@
       </td>
     </ng-container>
 
+    <ng-container matColumnDef="type">
+      <th mat-header-cell *matHeaderCellDef>Type</th>
+      <td mat-cell class="labels" *matCellDef="let element">
+        <app-application-type-pill [type]="element.type"> </app-application-type-pill>
+      </td>
+    </ng-container>
+
     <ng-container matColumnDef="activeDays">
       <th mat-header-cell *matHeaderCellDef>Active Days</th>
       <td mat-cell *matCellDef="let element">
