--- a/alcs-frontend/src/app/shared/card/card.component.scss
+++ b/alcs-frontend/src/app/shared/card/card.component.scss
@@ -71,18 +71,8 @@ $date-ht: 48px;
   }
 }
 
-.type {
-  margin: 8px 8px 0 0;
-  border-radius: 10px;
-  width: fit-content;
-  display: inline-flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 8px;
-  height: 24px;
-  font-size: 11px;
-  letter-spacing: 0.03em;
-  border: 3px solid;
+.labels {
+  margin-top: 6px;
 }
 
 .cdk-drag-placeholder {
