Bug Fixes for Create Application
* Add type=button to prevent enter from doing anything
* Sort local governments alphabetically

--- a/portal-frontend/src/app/features/edit-application/edit-application.component.html
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.html
@@ -37,8 +37,8 @@
         </div>
       </div>
       <div class="step-buttons">
-        <button mat-stroked-button (click)="onSaveAndExit()">Save and exit</button>
-        <button mat-flat-button color="primary" (click)="onSubmit()">Submit</button>
+        <button type="button" mat-stroked-button (click)="onSaveAndExit()">Save and exit</button>
+        <button type="button" mat-flat-button color="primary" (click)="onSubmit()">Submit</button>
       </div>
     </form>
   </mat-step>
