--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
@@ -4,7 +4,7 @@
     <div class='icon'>
       <mat-icon inline='true'>cloud_upload</mat-icon>
     </div>
-    <button (click)='fileUpload.click()' mat-flat-button color='accent'>
+    <button type="button" (click)='fileUpload.click()' mat-flat-button color='accent'>
       Choose files to Upload
     </button>
     <div class='drag-text'>or drag and drop them here</div>
