--- a/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.html
+++ b/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.html
@@ -19,7 +19,11 @@
     <ng-container matColumnDef="type">
       <th mat-header-cell *matHeaderCellDef>Type</th>
       <td mat-cell class="labels" *matCellDef="let element">
-        <app-application-type-pill [type]="element.type"> </app-application-type-pill>
+        <app-application-type-pill [useShortLabel]="true" *ngIf="element.appType" [type]="element.appType"> </app-application-type-pill>
+        <app-application-type-pill [useShortLabel]="true" *ngIf="element.parentType === 'modification'" [type]="MODIFICATION_LABEL"> </app-application-type-pill>
+        <app-application-type-pill [useShortLabel]="true" *ngIf="element.parentType === 'reconsideration'" [type]="RECONSIDERATION_LABEL"> </app-application-type-pill>
+        <app-application-type-pill [useShortLabel]="true" *ngIf="element.parentType === 'covenant'" [type]="COVENANT_LABEL"> </app-application-type-pill>
+        <app-application-type-pill [useShortLabel]="true" *ngIf="element.parentType === 'planning-review'" [type]="PLANNING_REVIEW_LABEL"> </app-application-type-pill>
       </td>
     </ng-container>
 
@@ -75,7 +79,7 @@
       *matRowDef="let row; columns: displayedColumns"
     ></tr>
     <tr class="mat-row no-data" *matNoDataRow>
-      <td class="text-center" colspan="6">No Incomplete Subtasks</td>
+      <td class="text-center" colspan="7">No Incomplete Subtasks</td>
     </tr>
   </table>
 </div>
