Add PrettyName to AssigneeDto
Replace usages of name to prettyName

--- a/alcs-frontend/src/app/features/board/subtasks/subtasks.component.html
+++ b/alcs-frontend/src/app/features/board/subtasks/subtasks.component.html
@@ -34,7 +34,7 @@
           <app-avatar-circle
             *ngIf="subtask.assignee"
             [initials]="subtask.assignee.initials || ''"
-            [name]="subtask.assignee.name"
+            [name]="subtask.assignee.prettyName"
           ></app-avatar-circle>
           <app-avatar-circle class="unassigned-circle" *ngIf="!subtask.assignee" initials="-"></app-avatar-circle>
         </div>
