--- a/alcs-frontend/src/app/shared/meeting-overview/meeting-overview.component.html
+++ b/alcs-frontend/src/app/shared/meeting-overview/meeting-overview.component.html
@@ -139,7 +139,7 @@
         <app-avatar-circle
           *ngIf="application.assignee"
           [initials]="application.assignee.initials"
-          [name]="application.assignee.name"
+          [name]="application.assignee.prettyName"
         ></app-avatar-circle>
       </div>
     </div>
