--- a/alcs-frontend/src/app/shared/card/card.component.html
+++ b/alcs-frontend/src/app/shared/card/card.component.html
@@ -41,7 +41,7 @@
       <app-avatar-circle
         *ngIf="cardData.assignee"
         [initials]="cardData.assignee?.initials || ''"
-        [name]="cardData.assignee.name"
+        [name]="cardData.assignee.prettyName"
       ></app-avatar-circle>
     </div>
   </div>
