--- a/alcs-frontend/src/app/features/home/audit/audit-subtasks.component.html
+++ b/alcs-frontend/src/app/features/home/audit/audit-subtasks.component.html
@@ -45,8 +45,8 @@
         <ng-select
           class="subtask-assignee"
           [items]="users"
-          bindLabel="name"
-          bindValue="name"
+          bindLabel="prettyName"
+          bindValue="prettyName"
           [ngModel]="element.assignee?.prettyName"
           [searchFn]="filterAssigneeList"
           (change)="onAssigneeSelected($event, element.uuid)"
