--- a/alcs-frontend/src/app/features/board/dialogs/covenant/covenant-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/covenant/covenant-dialog.component.html
@@ -74,8 +74,8 @@
       appearance="outline"
       [items]="$users | async"
       placeholder="Assigned Planner"
-      bindLabel="name"
-      bindValue="name"
+      bindLabel="prettyName"
+      bindValue="prettyName"
       [(ngModel)]="selectedAssigneeName"
       [searchFn]="filterAssigneeList"
       (change)="onAssigneeSelected($event)"
