--- a/alcs-frontend/src/app/shared/card/card.component.scss
+++ b/alcs-frontend/src/app/shared/card/card.component.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/colors';
+@import '../../../styles.scss';
 
 $card-ht: 160px;
 $date-ht: 48px;
@@ -40,7 +41,6 @@ $date-ht: 48px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  flex-wrap: wrap;
   height: 100%;
 }
 
@@ -109,4 +109,8 @@ $date-ht: 48px;
 mat-card.decision-date {
   border-top: none;
   height: calc($card-ht + $date-ht);
+}
+
+.ellipsis {
+  @include text-ellipsis($lines: 2);
 }
