fix application-pill styling

--- a/alcs-frontend/src/app/features/board/dialogs/planning-review/planning-review-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/planning-review/planning-review-dialog.component.html
@@ -7,7 +7,7 @@
   <div class="header-row">
     <div class="left">
       <h3 class="card-title center">
-        {{ planningReview.fileNumber }} ({{ planningReview.type }})
+        <span class="margin-right">{{ planningReview.fileNumber }} ({{ planningReview.type }})</span>
         <app-application-type-pill [type]="planningType"></app-application-type-pill>
       </h3>
     </div>
