--- a/alcs-frontend/src/styles.scss
+++ b/alcs-frontend/src/styles.scss
@@ -282,3 +282,7 @@ mat-button-toggle-group {
 .ng-select.ng-select-disabled .ng-select-container:after {
   background-image: none;
 }
+
+.margin-right {
+  margin-right: 12px;
+}
