--- a/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.html
@@ -7,7 +7,7 @@
   <div class="header-row">
     <div class="left">
       <h3 class="card-title">
-        {{ application.fileNumber }} ({{ application.applicant }})
+        <span class="margin-right">{{ application.fileNumber }} ({{ application.applicant }})</span>
         <app-application-type-pill [type]="application.type"></app-application-type-pill>
       </h3>
     </div>
