--- a/alcs-frontend/src/app/features/board/dialogs/covenant/covenant-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/covenant/covenant-dialog.component.html
@@ -6,8 +6,8 @@
   </div>
   <div class="header-row">
     <div class="left">
-      <h3 class="card-title center">
-        {{ covenant.fileNumber }} ({{ covenant.applicant }})
+      <h3 class="card-title">
+        <span class="margin-right">{{ covenant.fileNumber }} ({{ covenant.applicant }})</span>
         <app-application-type-pill [type]="covenantType"></app-application-type-pill>
       </h3>
     </div>
