--- a/alcs-frontend/src/app/shared/application-type-pill/application-type-pill.component.html
+++ b/alcs-frontend/src/app/shared/application-type-pill/application-type-pill.component.html
@@ -1,13 +1,15 @@
-<span
-  class="application-pill"
-  [ngClass]="{
-  'short-label': useShortLabel
-  }"
-  [ngStyle]="{
-    backgroundColor: type.backgroundColor,
-    color: type.textColor,
-    borderColor: type.borderColor || type.backgroundColor
-  }"
->
-  {{ useShortLabel ? type.shortLabel : type.label }}
+<span class="application-pill-wrapper">
+  <span
+    class="application-pill"
+    [ngClass]="{
+    'short-label': useShortLabel
+    }"
+    [ngStyle]="{
+      backgroundColor: type.backgroundColor,
+      color: type.textColor,
+      borderColor: type.borderColor || type.backgroundColor
+    }"
+  >
+    {{ useShortLabel ? type.shortLabel : type.label }}
+  </span>
 </span>
